--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "sideEffects": false,
   "main": "dist/index.js",
@@ -25,7 +25,7 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "impressions-sdk",
+  "name": "apilib",
   "description": "TODO : Enter description",
   "author": "Contact Name",
   "devDependencies": {
