--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "apilib",
+  "name": "impressions-sdk",
   "description": "TODO : Enter description",
   "author": "Contact Name",
   "devDependencies": {
