--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "sideEffects": false,
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "module": "dist/apilib.esm.js",
+  "module": "dist/impressions-sdklib.esm.js",
   "files": [
     "dist",
     "src"
@@ -25,7 +25,7 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "impressions-sdk",
+  "name": "impressions-sdklib",
   "description": "TODO : Enter description",
   "author": "Contact Name",
   "devDependencies": {
