--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "sideEffects": false,
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "module": "dist/apilib.esm.js",
+  "module": "dist/impressions-sdklib.esm.js",
   "files": [
     "dist",
     "src"
